# couchdump

./: README.md  couchdump.cabal
src/: Main.hs
src/CouchDump/: Args.hs  Convert.hs  CouchDbClient.hs  Misc.hs
zsh/: _couchdump
