name:                couchdump
version:             0.1
license:             Apache-2.0
license-file:        LICENSE
author:              Michael Krolikowski
maintainer:          mkroli@yahoo.de
copyright:           Michael Krolikowski
build-type:          Simple
cabal-version:       >=1.10

executable couchdump
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                     , bytestring >=0.10.4.0
                     , aeson >=0.9.0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
