name: couchdump
version: 0.1
cabal-version: >=1.10
build-type: Simple
license: Apache-2.0
license-file: LICENSE
copyright: Michael Krolikowski
maintainer: mkroli@yahoo.de
author: Michael Krolikowski

executable couchdump
    main-is: Main.hs
    build-depends:
        aeson >=0.9.0.1,
        base >=4.6,
        bytestring >=0.10.4.0,
        cmdargs >=0.10.13,
        http-conduit >=2.1.8,
        http-types >=0.8.6,
        unordered-containers >=0.2.5.1
    default-language: Haskell2010
    hs-source-dirs: src
